@startuml

class Election {
    - id: Long
    - name: String
    - electionStart: LocalDateTime
    - electionEnd: LocalDateTime
    - electionType: String
}

class HasVoted {
    - election: Election
    - voter: Voter
    - voted: Boolean
}

class Vote {
    - candidate: Candidate
    - election: Election
}

class Voter {
    - schoolId: String
    - password: String
}

class Candidate {
   - schoolId: String
   - firstname: String
   - lastname: String
   - grade: String
}

Vote   "*"--"1" Candidate  : > has
(Election, Voter) .. HasVoted
Election "1"--"*" Vote : < part of

@enduml